Add necessary dependencies